[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/wall/house/door-up-v3.png" type="Texture" id=1]
[ext_resource path="res://sprites/wall/house/door_open_v3.png" type="Texture" id=2]
[ext_resource path="res://scripts/object sctipts/wood-door-up.gd" type="Script" id=3]
[ext_resource path="res://sprites/other/_SU_CXPo--M.jpg" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.25, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2.5, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 56, 44 )

[node name="door" type="StaticBody2D"]
light_mask = 8
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -22, -40 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 22, -40 )
shape = SubResource( 2 )

[node name="close" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="sprite_close" type="Sprite" parent="close"]
light_mask = 8
position = Vector2( 0, -40 )
texture = ExtResource( 1 )

[node name="Collision_close" type="CollisionShape2D" parent="close"]
visible = false
light_mask = 8
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="open" type="StaticBody2D" parent="."]
light_mask = 8
collision_layer = 8
collision_mask = 4

[node name="sprite_open" type="Sprite" parent="open"]
visible = false
light_mask = 8
position = Vector2( 0, -40 )
texture = ExtResource( 2 )

[node name="Collision_open" type="CollisionShape2D" parent="open"]
visible = false
light_mask = 8
position = Vector2( 12, -25 )
shape = SubResource( 6 )

[node name="Door_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Collision_area_close" type="CollisionShape2D" parent="Door_area"]
visible = false
position = Vector2( 0, -18 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
light_mask = 8
position = Vector2( 0, -40 )
scale = Vector2( 0.25, 0.3125 )
texture = ExtResource( 4 )
range_item_cull_mask = 8

[connection signal="body_entered" from="Door_area" to="." method="_on_Door_area_body_entered"]
[connection signal="body_exited" from="Door_area" to="." method="_on_Door_area_body_exited"]
